# mc-server-deployer

backend/: Cargo.toml
backend/src/: get_user.rs  main.rs  server.rs  user.rs
backend/src/user/: user_details.rs
frontend/: .nev  package-lock.json  package.json
frontend/src/: hooks.server.ts
frontend/src/lib/components/: Navbar.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/dashboard/: +layout.svelte  +page.svelte
server-image/: Dockerfile  eula.txt  server.properties.bak.template  server.properties.template
server-image/backend/: Cargo.toml
server-image/backend/src/: main.rs  server_handler.rs
