[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
tokio = {version = "1.35.1", features = ["full"]}
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
