[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1", features = ["full"]}
actix-web = "4.4.1"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.112"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
aws-config = "1.1.4"
aws-sdk-dynamodb = "1.13.0"
aws-sdk-ec2 = "1.17.0"
aws-sdk-ssm = "1.12.0"
reqwest = {version = "0.11.23", features = ["json"]}
dotenv = "0.15.0"
