[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-rt = "2.9.0"
actix-web = "4.4.1"
handlebars = "4.5.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
